--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,30 +11,27 @@ body {
     background: url(background.jpg) center center / cover no-repeat fixed;
     padding: 0;
     margin: 0 0 40px;
-    color: #ffffff !important;
+    color: #ffffff;
 }
 
-.navbar-nav > li > a, .navbar-brand {
-    padding-top:5px !important; padding-bottom:0 !important;
+nav.navbar {
+    min-height: 30px;
+}
+
+p#topFont a.navbar-brand {
+    padding-top: 5px;
+    padding-bottom: 0;
     height: 30px;
 }
 
-.navbar {
-    min-height:30px !important;
+p#topFont a {
+    color: #ffffff;
+    margin: 5px;
+    font-size: 1.25em;
 }
 
-a {
-    color: #ffffff !important;
-    margin: 5px !important;
-    font-size: 1.25em !important;
-}
-
-a:hover {
-    font-weight: bold !important;
-}
-
-a:not(#home) {
-    border-left: 3px solid #ffffff !important;
+p#topFont a:hover {
+    font-weight: bold;
 }
 
 #titleFont {
@@ -42,8 +39,8 @@ a:not(#home) {
     margin-top: 20px;
 }
 
-.messageFont {
-    font-size: 1.75em !important;
+p#show.messageFont {
+    font-size: 1.75em;
     display: block;
     margin-left: 15px;
     margin-right: 15px;
@@ -70,8 +67,8 @@ footer {
         font-size: 2em;
         margin-top: 18px;
     }
-    .messageFont {
-        font-size: 1.6em !important;
+    p#show.messageFont {
+        font-size: 1.6em;
     }
     img {
         width: 170px;
@@ -79,15 +76,15 @@ footer {
 }
 
 @media screen and (max-width: 380px) {
-    a {
-        font-size: 1em !important;
+    p#topFont a {
+        font-size: 1em;
     }
     #titleFont {
         font-size: 1.8em;
         margin-top: 18px;
     }
-    .messageFont {
-        font-size: 1.4em !important;
+    p#show.messageFont {
+        font-size: 1.4em;
     }
     img {
         width: 150px;
